--- a/RemoteController/RemoteController/MainWindow.xaml
+++ b/RemoteController/RemoteController/MainWindow.xaml
@@ -10,8 +10,8 @@
     xmlns:c="clr-namespace:RemoteController.Controls"
     xmlns:e="http://schemas.epsiloner.git/wpf/"
     xmlns:views="clr-namespace:RemoteController.Views"
+    xmlns:tb="http://www.hardcodet.net/taskbar"
     mc:Ignorable="d"
-    Icon="icon.ico"
     DataContext="{ioCs:IoC vm:MainViewModel}"
     d:DataContext="{d:DesignInstance vm:MainViewModel}"
     Title="Remote PC controller" 
@@ -33,49 +33,66 @@
                 />
         </Grid>
     </c:StyledWindow.HeaderRightContent>
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
+    <c:StyledWindow.Content>
+	    <Grid>
+	        <Grid.ColumnDefinitions>
+	            <ColumnDefinition Width="Auto"/>
+	            <ColumnDefinition/>
+	        </Grid.ColumnDefinitions>
 
-        <ScrollViewer
-            Grid.Column="0"
-            VerticalScrollBarVisibility="Auto"
-            HorizontalScrollBarVisibility="Disabled">
-            <ItemsControl ItemsSource="{Binding Pages}">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <views:PageButton
-                            Command="{Binding ElementName=mainWindow, Path=DataContext.SelectCommand}"
-                            CommandParameter="{Binding}">
-                            <views:PageButton.Style>
-                                <Style TargetType="views:PageButton" BasedOn="{StaticResource {x:Type views:PageButton}}">
-                                    <Style.Triggers>
-                                        <DataTrigger Value="True">
-                                            <DataTrigger.Binding>
-                                                <MultiBinding Converter="{StaticResource Converter.EqualsMulti}">
-                                                    <Binding/>
-                                                    <Binding ElementName="mainWindow" Path="DataContext.Selected" Mode="OneWay"/>
-                                                </MultiBinding>
-                                            </DataTrigger.Binding>
+		    <tb:TaskbarIcon
+			    x:Name="tray"
+			    Visibility="Visible"
+			    ToolTipText="Testing"
+			    MenuActivation="RightClick"
+			    DoubleClickCommand="{Binding DoubleClickCommand}"
+			    d:DataContext="{d:DesignInstance vm:MainWindowTrayViewModel}">
+			    <tb:TaskbarIcon.ContextMenu>
+				    <ContextMenu>
+					    <MenuItem Header="Remote PC controller" Command="{Binding ApplicationNameCommand}" />
+					    <Separator />
+					    <MenuItem Header="Exit" Command="{Binding ExitCommand}" />
+				    </ContextMenu>
+			    </tb:TaskbarIcon.ContextMenu>
+		    </tb:TaskbarIcon>
 
-                                            <Setter Property="Background" Value="{StaticResource Brush.Primary.Darkest}" />
-                                        </DataTrigger>
-                                    </Style.Triggers>
-                                </Style>
-                            </views:PageButton.Style>
-                        </views:PageButton>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </ScrollViewer>
+			<ScrollViewer
+	            Grid.Column="0"
+	            VerticalScrollBarVisibility="Auto"
+	            HorizontalScrollBarVisibility="Disabled">
+	            <ItemsControl ItemsSource="{Binding Pages}">
+	                <ItemsControl.ItemTemplate>
+	                    <DataTemplate>
+	                        <views:PageButton
+	                            Command="{Binding ElementName=mainWindow, Path=DataContext.SelectCommand}"
+	                            CommandParameter="{Binding}">
+	                            <views:PageButton.Style>
+	                                <Style TargetType="views:PageButton" BasedOn="{StaticResource {x:Type views:PageButton}}">
+	                                    <Style.Triggers>
+	                                        <DataTrigger Value="True">
+	                                            <DataTrigger.Binding>
+	                                                <MultiBinding Converter="{StaticResource Converter.EqualsMulti}">
+	                                                    <Binding/>
+	                                                    <Binding ElementName="mainWindow" Path="DataContext.Selected" Mode="OneWay"/>
+	                                                </MultiBinding>
+	                                            </DataTrigger.Binding>
 
-        <ContentControl
-            Grid.Column="1" 
-            Background="Transparent"
-            Content="{Binding Selected, Mode=OneWay}"
-            Margin="8 0 0 0"/>
+	                                            <Setter Property="Background" Value="{StaticResource Brush.Primary.Darkest}" />
+	                                        </DataTrigger>
+	                                    </Style.Triggers>
+	                                </Style>
+	                            </views:PageButton.Style>
+	                        </views:PageButton>
+	                    </DataTemplate>
+	                </ItemsControl.ItemTemplate>
+	            </ItemsControl>
+	        </ScrollViewer>
 
-    </Grid>
+	        <ContentControl
+	            Grid.Column="1" 
+	            Background="Transparent"
+	            Content="{Binding Selected, Mode=OneWay}"
+	            Margin="8 0 0 0"/>
+	    </Grid>
+    </c:StyledWindow.Content>
 </c:StyledWindow>
