--- a/RemoteController/RemoteController/Resources/Styles/Button.xaml
+++ b/RemoteController/RemoteController/Resources/Styles/Button.xaml
@@ -28,7 +28,7 @@
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
         <Setter Property="BorderThickness" Value="0" />
-        <Setter Property="Padding" Value="16 4"></Setter>
+        <Setter Property="Padding" Value="16 4" />
 
         <Style.Triggers>
             <Trigger Property="IsEnabled" Value="True">
