--- a/RemoteController/RemoteController/Resources/Views/All.xaml
+++ b/RemoteController/RemoteController/Resources/Views/All.xaml
@@ -1,6 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:v="clr-namespace:RemoteController.Views">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
 
         <!--Here are listed all view related resources only.-->
