Add UI part for Play Lists page.

--- a/RemoteController/RemoteController/Resources/Views/All.xaml
+++ b/RemoteController/RemoteController/Resources/Views/All.xaml
@@ -8,5 +8,6 @@
         <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Views/OverviewPageView.xaml" />
         <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Views/PathsManagerView.xaml" />
         <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Views/CommandsPageView.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Views/PlayListsPageView.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
