--- a/RemoteController/RemoteController/Resources/Views/PlayListsPageView.xaml
+++ b/RemoteController/RemoteController/Resources/Views/PlayListsPageView.xaml
@@ -1,15 +1,10 @@
-﻿<ResourceDictionary 
+<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:v="clr-namespace:RemoteController.Views"
     xmlns:vm="clr-namespace:RemoteController.ViewModels.Pages"
-    xmlns:e="http://schemas.epsiloner.git/wpf/"
-    xmlns:vms="clr-namespace:RemoteController.ViewModels"
-    xmlns:utils="clr-namespace:RemoteController.Utils"
-    xmlns:helpers="clr-namespace:RemoteController.Helpers"
-    xmlns:manipulator="clr-namespace:RemoteController.Manipulator;assembly=RemoteController.Manipulator"
     mc:Ignorable="d" 
     >
     <ResourceDictionary.MergedDictionaries>
