Add sound manipulation (not tested). Add page for Sound.

--- a/RemoteController/RemoteController/Resources/Views/PageButton.xaml
+++ b/RemoteController/RemoteController/Resources/Views/PageButton.xaml
@@ -65,6 +65,9 @@
             <DataTrigger Binding="{Binding Name}" Value="{x:Static vm:PageName.Commands}">
                 <Setter TargetName="symbol" Property="Icon" Value="Code" />
             </DataTrigger>
+            <DataTrigger Binding="{Binding Name}" Value="{x:Static vm:PageName.SoundDevices}">
+                <Setter TargetName="symbol" Property="Icon" Value="VolumeUp" />
+            </DataTrigger>
         </DataTemplate.Triggers>
     </DataTemplate>
 
