--- a/RemoteController/RemoteController/Resources/Views/All.xaml
+++ b/RemoteController/RemoteController/Resources/Views/All.xaml
@@ -9,5 +9,6 @@
         <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Views/PathsManagerView.xaml" />
         <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Views/CommandsPageView.xaml" />
         <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Views/PlayListsPageView.xaml" />
+        <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Views/SoundDevicesPageView.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
