--- a/RemoteController/RemoteController/Resources/Views/CommandsPageViewModel.xaml
+++ b/RemoteController/RemoteController/Resources/Views/CommandsPageViewModel.xaml
@@ -3,22 +3,17 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:v="clr-namespace:RemoteController.Views"
     xmlns:vm="clr-namespace:RemoteController.ViewModels.Pages"
     xmlns:e="http://schemas.epsiloner.git/wpf/"
     xmlns:vms="clr-namespace:RemoteController.ViewModels"
     xmlns:utils="clr-namespace:RemoteController.Utils"
     xmlns:helpers="clr-namespace:RemoteController.Helpers"
     xmlns:manipulator="clr-namespace:RemoteController.Manipulator;assembly=RemoteController.Manipulator"
-    mc:Ignorable="d" 
-    >
+    mc:Ignorable="d">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Generic/All.xaml" />
         <ResourceDictionary Source="pack://application:,,,/RemoteController;component/Resources/Styles/Button.xaml" />
     </ResourceDictionary.MergedDictionaries>
-    <d:FrameworkElement.DataContext>
-        <x:Type Type="vm:CommandsPageViewModel" />
-    </d:FrameworkElement.DataContext>
 
     <DataTemplate x:Key="CommandViewModel.DataTemplate" DataType="vms:CommandViewModel">
         <Grid 
@@ -318,7 +313,7 @@
         </DataTemplate.Triggers>
     </DataTemplate>
 
-    <ControlTemplate TargetType="v:CommandsPageView" x:Key="CommandsPageView.Template">
+    <DataTemplate DataType="{x:Type vm:CommandsPageViewModel}">
         <Grid>
             <ScrollViewer
                 x:Name="viewDefault"
@@ -354,15 +349,11 @@
                 ContentTemplate="{StaticResource CreateCommandViewModel.DataTemplate}"
                 Visibility="Collapsed"/>
         </Grid>
-        <ControlTemplate.Triggers>
+        <DataTemplate.Triggers>
             <DataTrigger Binding="{Binding CreateOrEdit, Converter={StaticResource Converter.IsNotNull}}" Value="True">
                 <Setter TargetName="viewDefault" Property="Visibility" Value="Collapsed" />
                 <Setter TargetName="viewCreation" Property="Visibility" Value="Visible" />
             </DataTrigger>
-        </ControlTemplate.Triggers>
-    </ControlTemplate>
-
-    <Style TargetType="v:CommandsPageView">
-        <Setter Property="Template" Value="{StaticResource CommandsPageView.Template}" />
-    </Style>
+        </DataTemplate.Triggers>
+    </DataTemplate>
 </ResourceDictionary>
