--- a/RemoteController/RemoteController.WinUi/Views/GenericPage.xaml
+++ b/RemoteController/RemoteController.WinUi/Views/GenericPage.xaml
@@ -6,7 +6,14 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid x:Name="ContentArea">
-        
-    </Grid>
+    <StackPanel 
+        x:Name="ContentArea"
+        Orientation="Vertical">
+        <TextBlock Text="{x:Bind ViewModel.Counter}" />
+
+        <Button
+            Content="Click me!" 
+            Command="{x:Bind ViewModel.IncreaseCounterCommand}"
+            />
+    </StackPanel>
 </Page>
